# Data-Journey

Docker-Workshop/: Dockerfile  pyproject.toml
Docker-Workshop/app/: app.py
