[tool.poetry]
name = "docker-workshop"
version = "0.1.0"
description = ""
authors = ["Gustavo-B-Morales-S <protected_gustavo_borges@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
